--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,5 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,8 +11,6 @@
     <script src="{% static '/js/dj_func.js' %}"></script>
 </head>
 <body>
-
-
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="mynavbar">
@@ -21,13 +19,13 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'homepage' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'contacts' %}">Address book</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Notes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'news' %}">News</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Files</a></li>
                 </ul>
             </div>
             <div class="d-flex">
                 <ul class="navbar-nav me-auto">
-                    {% if request.user.is_authenticated%}
+                    {% if request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
