--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,6 +20,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'contacts' %}">Address book</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Notes</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'news' %}">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'currency' %}">Currency Converter</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Files</a></li>
                 </ul>
             </div>
