--- a/templates/weather_page.html
+++ b/templates/weather_page.html
@@ -1,46 +1,61 @@
 {% extends 'homepage.html' %}
 {% block content %}
-<body style="background-color:MediumSeaGreen">
-<form method="POST">
-    {% csrf_token %}
-    <h3>Forecast in your location city:</h3>
-        <table style="width:100%; height:100px">
-            <colgroup>
-                <col span="13" style="background-color: white">
-            </colgroup>
-            <tr style="text-align:center">
-                <th>City</th>
-                <th>Country</th>
-                <th>Temp C</th>
-                <th>Temp F</th>
-                <th>Clouds %</th>
-                <th>Wind km/h</th>
-                <th>Wind miles/h</th>
-                <th>Visibility km</th>
-                <th>Visibility miles</th>
-                <th>Barometer mb</th>
-                <th>Humidity %</th>
-                <th>Data</th>
-            </tr>
-            <tr style="text-align:center">
-                <td>{{ data.name }}</td>
-                <td width="180px">{{ data.country }}</td>
-                <td>{{ data.temp_c }}</td>
-                <td>{{ data.temp_f }}</td>
-                <td>{{ data.clouds }}</td>
-                <td>{{ data.wind_kmh }}</td>
-                <td>{{ data.wind_mh }}</td>
-                <td>{{ data.visibility_km }}</td>
-                <td>{{ data.visibility_m }}</td>
-                <td>{{ data.pressure }}</td>
-                <td>{{ data.humidity }}</td>
-                <td width="150px">{{ data.dt }}</td>
-            </tr>
-        </table>
-        <h1></h1>
-        <input type="text" name="city" size="30" required value="" placeholder="Enter city name">
-        <h1></h1>
-        <input type="submit" value="Search">
-</form>
+{% load static %}
+<link rel="stylesheet" href="{% static '/css/weather_style.css' %}">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<body>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="container-fluid px-1 px-sm-3 py-5 mx-auto">
+        <div class="row d-flex justify-content-center">
+            <div class="row card0">
+                <div class="card1 col-lg-8 col-md-7">
+                    <div class="text-center"><img class="image mt-5" src="https://i.imgur.com/M8VyA2h.png"></div>
+                    <div class="row px-3 mt-3 mb-3">
+                        <h1 class="large-font mr-3" style="color:white">
+                            {{ data.temp_c }}&#176;C | {{ data.temp_f }}&#176;F</h1>
+                        <div class="d-flex flex-column mr-3">
+                            <h2 class="mt-3 mb-0" style="color:white">
+                                {{ data.name }}, {{ data.country }}</h2><small style="color:white">{{ data.dt }}</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card2 col-lg-4 col-md-5">
+                    <div class="row px-3"><input type="text" name="location" required value=""
+                                                 placeholder="Another location" class="mb-5">
+                        <button class="fa fa-search mb-5 mr-0 text-center
+                         btn-outline-secondary btn-sm"></button>
+                    </div>
+                    <div class="mr-5">
+                        <p style="color:white">Weather Details</p>
+                        <div class="row px-3">
+                            <p class="light-text">Cloudy</p>
+                            <p class="ml-auto" style="color:white">{{ data.clouds }} %</p>
+                        </div>
+                        <div class="row px-3">
+                            <p class="light-text">Humidity</p>
+                            <p class="ml-auto" style="color:white">{{ data.humidity }} %</p>
+                        </div>
+                        <div class="row px-3">
+                            <p class="light-text">Wind</p>
+                            <p class="ml-auto" style="color:white">{{ data.wind_kmh }} km/h | {{ data.wind_mh }} m/h</p>
+                        </div>
+                        <div class="row px-3">
+                            <p class="light-text">Visibility</p>
+                            <p class="ml-auto" style="color: white">
+                                {{ data.visibility_km }} km | {{ data.visibility_m}} m</p>
+                        </div>
+                        <div class="row px-3">
+                            <p class="light-text">Barometer mb</p>
+                            <p class="ml-auto" style="color:white">{{ data.pressure }} mm</p>
+                        </div>
+                        <div class="line mt-3"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </form>
 </body>
 {% endblock %}
