--- a/templates/tech_page.html
+++ b/templates/tech_page.html
@@ -5,7 +5,7 @@ crossorigin="anonymous">
 <body>
 <div class="jumbotron" style="color:black">
     <h1 class="text-center">
-        Get the latest news in computer science on our application
+        Get the latest news from TechCrunch on our application
     </h1>
 </div>
 <div class="container; text-center">
