--- a/static/css/weather_style.css
+++ b/static/css/weather_style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: -webkit-linear-gradient(#81D4FA, #2196F3);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(198,224,250,1) 100%);
     background-repeat: no-repeat;
     background-position: center 0;
     background-attachment: fixed;
