--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -54,7 +54,7 @@
 
 </main>
 
-<div class="my-0 p-2 bg-dark text-white text-center">
+<div class="my-0 p-2 bg-dark text-white text-center fixed">
 
       <div class="container text-center text-md-left mt-">
 
@@ -94,13 +94,13 @@
         <h6 class="text-uppercase font-weight-bold">Contact</h6>
         <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <i class="fas fa-home mr-3"></i> Kyiv, Ukraine, st. NNNNN 3222/1111</p>
+          <i class="fas fa-home mr-3"></i>Mechnykova st. 2, Kyiv, 01133, Ukraine</p>
         <p>
-          <i class="fas fa-envelope mr-3"></i> NNNNNNNNNN@gmail.com</p>
+          <i class="fas fa-envelope mr-3"></i> support@assistant.bot.com</p>
         <p>
-          <i class="fas fa-phone mr-3"></i> + 380000000000</p>
+          <i class="fas fa-phone mr-3"></i>+380(44)555-77-99</p>
         <p>
-          <i class="fas fa-print mr-3"></i> + 380000000001</p>
+          <i class="fas fa-print mr-3"></i>0-800-555-777</p>
 
       </div>
       <!-- Grid column -->
