--- a/templates/news_header.html
+++ b/templates/news_header.html
@@ -1,12 +1,14 @@
 {% extends 'homepage.html' %}
 {% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static '/css/news_header.css' %}">
 <header>
-    <nav class="navbar navbar-light bg-faded" style="background-color:LightGray">
+    <nav class="navbar navbar-light bg-faded sticky" style="background-color:LightGray">
         <a class="navbar-brand" href="/news">News</a>
         <a class="navbar-brand" href="/finance">Finance</a>
         <a class="navbar-brand" href="/sport">Sports</a>
         <a class="navbar-brand" href="/entertainment">Entertainment</a>
-        <a class="navbar-brand" href="/hacker">Hacker</a>
+        <a class="navbar-brand" href="/hacker">TechCrunch</a>
         <div>
             <h4>{{ data.name }}, {{ data.temp_c }} °C, {{ data.temp_f}} °F</h4>
             <a href="/weather" style="color:black; font-size:12px">see more >></a>
