--- a/templates/currency.html
+++ b/templates/currency.html
@@ -231,7 +231,7 @@
                 </div>
                 <div>
                     <div class="colmun col-center">
-                        <input type="text" name="amount" placeholder="0"></div>
+                        <input type="number" name="amount" required placeholder="0"></div>
                 </div>
                 <div class="field grid-50-50">
                     <div class="colmun col-center">
