--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a class="nav-link" href="">Notes</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'news' %}">News</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'currency' %}">Currency Converter</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">Files</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'files' %}">Files</a></li>
                 </ul>
             </div>
             <div class="d-flex">
